completable-reactor-parser/src/main/java/ru/fix/completable/reactor/parser/java/antlr/GraphParser.java
// Generated from Graph.g4 by ANTLR 4.7.1
package ru.fix.completable.reactor.parser.java.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Coordinate=30, SUBGRAPH=31, 
		MERGER=32, HANDLER=33, SUSPEND_HANDLER=34, PAYLOAD=35, COMPLETE=36, ROUTER=37, 
		MUTATOR=38, CLONE=39, VERTEX=40, DecimalNumeral=41, LPAREN=42, RPAREN=43, 
		LBRACE=44, RBRACE=45, SEMI=46, COMMA=47, DOT=48, AT=49, ASSIGN=50, NEW=51, 
		COLONCOLON=52, StringLiteral=53, Identifier=54, WS=55, COMMENT=56, LINE_COMMENT=57, 
		OTHER_SYMBOL=58;
	public static final int
		RULE_sourceFile = 0, RULE_graphBlock = 1, RULE_graphDeclarationBlock = 2, 
		RULE_classModifier = 3, RULE_classAnnotation = 4, RULE_graphClass = 5, 
		RULE_payloadType = 6, RULE_vertexAssignmentBlock = 7, RULE_vertexCloningBlock = 8, 
		RULE_vertexName = 9, RULE_vertexBuilder = 10, RULE_builderSubgraph = 11, 
		RULE_subgraphPayloadClass = 12, RULE_builderRouter = 13, RULE_builderHandler = 14, 
		RULE_handler = 15, RULE_builderMerger = 16, RULE_builderWithMerger = 17, 
		RULE_builderWithoutMerger = 18, RULE_builderWithEmptyMerger = 19, RULE_anythingBeforeRParen = 20, 
		RULE_anythingBeforeRBrace = 21, RULE_ignoreBracesBlock = 22, RULE_ignoreParenthesesBlock = 23, 
		RULE_payloadTransitionBlock = 24, RULE_handleBy = 25, RULE_vertexTransitionBlock = 26, 
		RULE_vertexTransition = 27, RULE_vertexTransitionOn = 28, RULE_vertexTransitionOnAny = 29, 
		RULE_transitionAction = 30, RULE_transitionActionComplete = 31, RULE_transitionActionMergeBy = 32, 
		RULE_transitionActionHandleBy = 33, RULE_coordinatesBlock = 34, RULE_coordinate = 35, 
		RULE_coordinatePayload = 36, RULE_coordinateHandler = 37, RULE_coordinateSubgraph = 38, 
		RULE_coordinateRouter = 39, RULE_coordinateMerger = 40, RULE_coordinateVertex = 41, 
		RULE_coordinateComplete = 42, RULE_transitionCondition = 43, RULE_ignoredToken = 44, 
		RULE_anyGraphKeyword = 45;
	public static final String[] ruleNames = {
		"sourceFile", "graphBlock", "graphDeclarationBlock", "classModifier", 
		"classAnnotation", "graphClass", "payloadType", "vertexAssignmentBlock", 
		"vertexCloningBlock", "vertexName", "vertexBuilder", "builderSubgraph", 
		"subgraphPayloadClass", "builderRouter", "builderHandler", "handler", 
		"builderMerger", "builderWithMerger", "builderWithoutMerger", "builderWithEmptyMerger", 
		"anythingBeforeRParen", "anythingBeforeRBrace", "ignoreBracesBlock", "ignoreParenthesesBlock", 
		"payloadTransitionBlock", "handleBy", "vertexTransitionBlock", "vertexTransition", 
		"vertexTransitionOn", "vertexTransitionOnAny", "transitionAction", "transitionActionComplete", 
		"transitionActionMergeBy", "transitionActionHandleBy", "coordinatesBlock", 
		"coordinate", "coordinatePayload", "coordinateHandler", "coordinateSubgraph", 
		"coordinateRouter", "coordinateMerger", "coordinateVertex", "coordinateComplete", 
		"transitionCondition", "ignoredToken", "anyGraphKeyword"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'constructor'", "'extends'", "':'", "'Graph'", "'<'", 
		"'>'", "'public'", "'protected'", "'private'", "'abstract'", "'static'", 
		"'final'", "'open'", "'sealed'", "'val'", "'var'", "'withMerger'", "'withRoutingMerger'", 
		"'withoutMerger'", "'withEmptyMerger'", "'handleBy'", "'on'", "'onAny'", 
		"'mergeBy'", "'coordinates'", "'pd'", "'vx'", "'ct'", null, "'subgraph'", 
		"'merger'", "'handler'", "'suspendHandler'", "'payload'", "'complete'", 
		"'router'", "'mutator'", "'clone'", "'Vertex'", null, "'('", "')'", "'{'", 
		"'}'", "';'", "','", "'.'", "'@'", "'='", "'new'", "'::'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "Coordinate", "SUBGRAPH", "MERGER", 
		"HANDLER", "SUSPEND_HANDLER", "PAYLOAD", "COMPLETE", "ROUTER", "MUTATOR", 
		"CLONE", "VERTEX", "DecimalNumeral", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"SEMI", "COMMA", "DOT", "AT", "ASSIGN", "NEW", "COLONCOLON", "StringLiteral", 
		"Identifier", "WS", "COMMENT", "LINE_COMMENT", "OTHER_SYMBOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Graph.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceFileContext extends ParserRuleContext {
		public List<GraphBlockContext> graphBlock() {
			return getRuleContexts(GraphBlockContext.class);
		}
		public GraphBlockContext graphBlock(int i) {
			return getRuleContext(GraphBlockContext.class,i);
		}
		public List<IgnoredTokenContext> ignoredToken() {
			return getRuleContexts(IgnoredTokenContext.class);
		}
		public IgnoredTokenContext ignoredToken(int i) {
			return getRuleContext(IgnoredTokenContext.class,i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFile; }
	}

	public final SourceFileContext sourceFile() throws RecognitionException {
		SourceFileContext _localctx = new SourceFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceFile);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(92);
						graphBlock();
						}
						break;
					case 2:
						{
						setState(93);
						ignoredToken();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(96); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphBlockContext extends ParserRuleContext {
		public PayloadTransitionBlockContext payloadTransitionBlock() {
			return getRuleContext(PayloadTransitionBlockContext.class,0);
		}
		public VertexTransitionBlockContext vertexTransitionBlock() {
			return getRuleContext(VertexTransitionBlockContext.class,0);
		}
		public VertexAssignmentBlockContext vertexAssignmentBlock() {
			return getRuleContext(VertexAssignmentBlockContext.class,0);
		}
		public VertexCloningBlockContext vertexCloningBlock() {
			return getRuleContext(VertexCloningBlockContext.class,0);
		}
		public CoordinatesBlockContext coordinatesBlock() {
			return getRuleContext(CoordinatesBlockContext.class,0);
		}
		public GraphDeclarationBlockContext graphDeclarationBlock() {
			return getRuleContext(GraphDeclarationBlockContext.class,0);
		}
		public GraphBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphBlock; }
	}

	public final GraphBlockContext graphBlock() throws RecognitionException {
		GraphBlockContext _localctx = new GraphBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_graphBlock);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				payloadTransitionBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				vertexTransitionBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				vertexAssignmentBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				vertexCloningBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				coordinatesBlock();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				graphDeclarationBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphDeclarationBlockContext extends ParserRuleContext {
		public GraphClassContext graphClass() {
			return getRuleContext(GraphClassContext.class,0);
		}
		public PayloadTypeContext payloadType() {
			return getRuleContext(PayloadTypeContext.class,0);
		}
		public List<ClassAnnotationContext> classAnnotation() {
			return getRuleContexts(ClassAnnotationContext.class);
		}
		public ClassAnnotationContext classAnnotation(int i) {
			return getRuleContext(ClassAnnotationContext.class,i);
		}
		public List<ClassModifierContext> classModifier() {
			return getRuleContexts(ClassModifierContext.class);
		}
		public ClassModifierContext classModifier(int i) {
			return getRuleContext(ClassModifierContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(GraphParser.LPAREN, 0); }
		public AnythingBeforeRParenContext anythingBeforeRParen() {
			return getRuleContext(AnythingBeforeRParenContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GraphParser.RPAREN, 0); }
		public GraphDeclarationBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphDeclarationBlock; }
	}

	public final GraphDeclarationBlockContext graphDeclarationBlock() throws RecognitionException {
		GraphDeclarationBlockContext _localctx = new GraphDeclarationBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_graphDeclarationBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(106);
				classAnnotation();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) {
				{
				{
				setState(112);
				classModifier();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__0);
			setState(119);
			graphClass();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << AT))) != 0)) {
				{
				setState(122);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__13:
				case T__14:
					{
					setState(120);
					classModifier();
					}
					break;
				case AT:
					{
					setState(121);
					classAnnotation();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(127);
				match(T__1);
				}
			}

			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(130);
				match(LPAREN);
				setState(131);
				anythingBeforeRParen();
				setState(132);
				match(RPAREN);
				}
			}

			setState(136);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(137);
			match(T__4);
			setState(138);
			match(T__5);
			setState(139);
			payloadType();
			setState(140);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassModifierContext extends ParserRuleContext {
		public ClassModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classModifier; }
	}

	public final ClassModifierContext classModifier() throws RecognitionException {
		ClassModifierContext _localctx = new ClassModifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassAnnotationContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(GraphParser.AT, 0); }
		public TerminalNode Identifier() { return getToken(GraphParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(GraphParser.LPAREN, 0); }
		public AnythingBeforeRParenContext anythingBeforeRParen() {
			return getRuleContext(AnythingBeforeRParenContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GraphParser.RPAREN, 0); }
		public ClassAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classAnnotation; }
	}

	public final ClassAnnotationContext classAnnotation() throws RecognitionException {
		ClassAnnotationContext _localctx = new ClassAnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classAnnotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(AT);
			setState(145);
			match(Identifier);
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(146);
				match(LPAREN);
				setState(147);
				anythingBeforeRParen();
				setState(148);
				match(RPAREN);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphClassContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(GraphParser.Identifier, 0); }
		public GraphClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphClass; }
	}

	public final GraphClassContext graphClass() throws RecognitionException {
		GraphClassContext _localctx = new GraphClassContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_graphClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PayloadTypeContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(GraphParser.Identifier, 0); }
		public PayloadTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payloadType; }
	}

	public final PayloadTypeContext payloadType() throws RecognitionException {
		PayloadTypeContext _localctx = new PayloadTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_payloadType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VertexAssignmentBlockContext extends ParserRuleContext {
		public VertexNameContext vertexName() {
			return getRuleContext(VertexNameContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(GraphParser.ASSIGN, 0); }
		public VertexBuilderContext vertexBuilder() {
			return getRuleContext(VertexBuilderContext.class,0);
		}
		public TerminalNode VERTEX() { return getToken(GraphParser.VERTEX, 0); }
		public TerminalNode SEMI() { return getToken(GraphParser.SEMI, 0); }
		public VertexAssignmentBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertexAssignmentBlock; }
	}

	public final VertexAssignmentBlockContext vertexAssignmentBlock() throws RecognitionException {
		VertexAssignmentBlockContext _localctx = new VertexAssignmentBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vertexAssignmentBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << VERTEX))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(157);
			vertexName();
			setState(158);
			match(ASSIGN);
			setState(159);
			vertexBuilder();
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(160);
				match(SEMI);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VertexCloningBlockContext extends ParserRuleContext {
		public List<VertexNameContext> vertexName() {
			return getRuleContexts(VertexNameContext.class);
		}
		public VertexNameContext vertexName(int i) {
			return getRuleContext(VertexNameContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(GraphParser.ASSIGN, 0); }
		public TerminalNode DOT() { return getToken(GraphParser.DOT, 0); }
		public TerminalNode CLONE() { return getToken(GraphParser.CLONE, 0); }
		public TerminalNode LPAREN() { return getToken(GraphParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GraphParser.RPAREN, 0); }
		public TerminalNode VERTEX() { return getToken(GraphParser.VERTEX, 0); }
		public TerminalNode SEMI() { return getToken(GraphParser.SEMI, 0); }
		public VertexCloningBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertexCloningBlock; }
	}

	public final VertexCloningBlockContext vertexCloningBlock() throws RecognitionException {
		VertexCloningBlockContext _localctx = new VertexCloningBlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vertexCloningBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << VERTEX))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(164);
			vertexName();
			setState(165);
			match(ASSIGN);
			setState(166);
			vertexName();
			setState(167);
			match(DOT);
			setState(168);
			match(CLONE);
			setState(169);
			match(LPAREN);
			setState(170);
			match(RPAREN);
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(171);
				match(SEMI);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VertexNameContext extends ParserRuleContext {
		public AnyGraphKeywordContext anyGraphKeyword() {
			return getRuleContext(AnyGraphKeywordContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(GraphParser.Identifier, 0); }
		public VertexNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertexName; }
	}

	public final VertexNameContext vertexName() throws RecognitionException {
		VertexNameContext _localctx = new VertexNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vertexName);
		try {
			setState(176);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
			case T__27:
			case T__28:
			case SUBGRAPH:
			case MERGER:
			case HANDLER:
			case PAYLOAD:
			case COMPLETE:
			case ROUTER:
			case MUTATOR:
			case CLONE:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				anyGraphKeyword();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
